Update: main - Diff report completed

--- a/beta/diff_add-constants-2.html
+++ b/beta/diff_add-constants-2.html
@@ -67,7 +67,7 @@
       </svg>      <a href="#d2h-805166" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/__init__.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+17</span>
-          <span class="d2h-lines-deleted">-83</span>
+          <span class="d2h-lines-deleted">-85</span>
       </span>
     </span>
 </li>
@@ -162,8 +162,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-574578" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/manifest.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+4</span>
-          <span class="d2h-lines-deleted">-5</span>
+          <span class="d2h-lines-added">+5</span>
+          <span class="d2h-lines-deleted">-6</span>
       </span>
     </span>
 </li>
@@ -210,8 +210,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-270711" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/strings.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+46</span>
-          <span class="d2h-lines-deleted">-63</span>
+          <span class="d2h-lines-added">+47</span>
+          <span class="d2h-lines-deleted">-64</span>
       </span>
     </span>
 </li>
@@ -836,7 +836,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -62,74 +33,31 @@</div>
+        <div class="d2h-code-side-line">@@ -62,76 +33,31 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -1429,8 +1429,28 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del">
       121
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    if entry.domain == Platform.BINARY_SENSOR and entry.unique_id.endswith(&quot;-slave_boiler_state&quot;):</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del">
+      122
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        return {&quot;new_unique_id&quot;: entry.unique_id.replace(&quot;-slave_boiler_state&quot;, &quot;-secondary_boiler_state&quot;)}</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      123
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1440,7 +1460,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      122
+      124
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1450,7 +1470,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      123
+      125
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -1460,7 +1480,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      124
+      126
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -1470,7 +1490,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      125
+      127
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -1480,7 +1500,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      126
+      128
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -1490,7 +1510,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      127
+      129
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -1500,7 +1520,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      128
+      130
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -1510,7 +1530,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      129
+      131
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1520,7 +1540,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      130
+      132
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1530,7 +1550,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      131
+      133
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1540,7 +1560,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      132
+      134
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1560,7 +1580,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      133
+      135
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1570,7 +1590,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      134
+      136
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1580,7 +1600,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      135
+      137
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1591,11 +1611,11 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -137,10 +65,10 @@</div>
+        <div class="d2h-code-side-line">@@ -139,10 +65,10 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      137
+      139
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1605,7 +1625,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      138
+      140
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1615,7 +1635,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      139
+      141
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1625,7 +1645,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      140
+      142
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -1635,7 +1655,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      141
+      143
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1645,7 +1665,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      142
+      144
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1655,7 +1675,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      143
+      145
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -1665,7 +1685,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      144
+      146
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1675,7 +1695,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      145
+      147
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1685,7 +1705,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      146
+      148
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1696,11 +1716,11 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -148,4 +76,10 @@</div>
+        <div class="d2h-code-side-line">@@ -150,4 +76,10 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      148
+      150
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1710,7 +1730,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      149
+      151
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1720,7 +1740,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      150
+      152
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -1790,7 +1810,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      151
+      153
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -2978,6 +2998,26 @@
         </div>
     </td>
 </tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
       54
     </td>
@@ -3638,7 +3678,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    SEVERITIES,</span>
+            <span class="d2h-code-line-ctn">    SECONDARY_BOILER_STATE,</span>
         </div>
     </td>
 </tr><tr>
@@ -3648,7 +3688,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    SLAVE_BOILER_STATE,</span>
+            <span class="d2h-code-line-ctn">    SEVERITIES,</span>
         </div>
     </td>
 </tr><tr>
@@ -4103,7 +4143,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        key=<del>SLAVE_BOILER_STATE</del>,</span>
+            <span class="d2h-code-line-ctn">        key=<del>SECONDARY_BOILER_STATE</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -4113,7 +4153,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        translation_key=<del>SLAVE_BOILER_STATE</del>,</span>
+            <span class="d2h-code-line-ctn">        translation_key=<del>SECONDARY_BOILER_STATE</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -17347,7 +17387,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">SLAVE_BOILER_STATE: Final = &quot;slave_boiler_state&quot;</span>
+            <span class="d2h-code-line-ctn">SECONDARY_BOILER_STATE: Final = &quot;secondary_boiler_state&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -24438,13 +24478,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       11
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.37.1&quot;],</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.37.<del>2</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -24582,13 +24622,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       10
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.37.1&quot;],</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.37.<ins>1</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -30372,7 +30412,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -60,10 +43,10 @@</div>
+        <div class="d2h-code-side-line">@@ -60,12 +43,12 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -30455,13 +30495,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       68
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">      &quot;slave_boiler_state&quot;: {</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">      &quot;<del>secondary_boiler_state</del>&quot;: {</span>
         </div>
     </td>
 </tr><tr>
@@ -30472,6 +30512,26 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Secondary boiler state&quot;</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      70
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">      },</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      71
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">      &quot;plugwise_notification&quot;: {</span>
         </div>
     </td>
 </tr><tr>
@@ -32334,13 +32394,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       51
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">      &quot;slave_boiler_state&quot;: {</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">      &quot;<ins>slave_boiler_state</ins>&quot;: {</span>
         </div>
     </td>
 </tr><tr>
@@ -32351,6 +32411,26 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Secondary boiler state&quot;</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      53
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">      },</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      54
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">      &quot;plugwise_notification&quot;: {</span>
         </div>
     </td>
 </tr><tr>
