--- a/beta/index.html
+++ b/beta/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
+                        <li><a href='diff_various.html'>Unified diff core:dev vs beta:origin/various</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
