--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,12 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_CoMPaTech-patch-1.html'>Unified diff core:dev vs beta:origin/CoMPaTech-patch-1</a></li>
+
+                        <li><a href='diff_CoMPaTech-patch-2.html'>Unified diff core:dev vs beta:origin/CoMPaTech-patch-2</a></li>
+
+                        <li><a href='diff_CoMPaTech-patch-3.html'>Unified diff core:dev vs beta:origin/CoMPaTech-patch-3</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
