--- a/beta/index.html
+++ b/beta/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/pre-commit-pre-commit-hooks-4.x.html'>Unified diff core:dev vs beta:origin/renovate/pre-commit-pre-commit-hooks-4.x</a></li>
+
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                         <li><a href='diff_various.html'>Unified diff core:dev vs beta:origin/various</a></li>
