Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -40067,7 +40067,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">                &quot;Add %s %s sensor&quot;, device[ATTR_NAME], description.translation_key</span>
+            <span class="d2h-code-line-ctn">                &quot;Add %s %s sensor&quot;, device[ATTR_NAME], description.translation_key or description.key</span>
         </div>
     </td>
 </tr><tr>
