--- a/beta/index.html
+++ b/beta/index.html
@@ -12,9 +12,7 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_CoMPaTech-patch-1.html'>Unified diff core:dev vs beta:origin/CoMPaTech-patch-1</a></li>
-
-                        <li><a href='diff_CoMPaTech-patch-3.html'>Unified diff core:dev vs beta:origin/CoMPaTech-patch-3</a></li>
+                        <li><a href='diff_devfix.html'>Unified diff core:dev vs beta:origin/devfix</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
@@ -22,13 +20,9 @@
 
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
-                        <li><a href='diff_pre-commit-ci-update-config.html'>Unified diff core:dev vs beta:origin/pre-commit-ci-update-config</a></li>
-
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
-
-                        <li><a href='diff_various.html'>Unified diff core:dev vs beta:origin/various</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
