--- a/beta/index.html
+++ b/beta/index.html
@@ -20,6 +20,10 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_runtime-delete.html'>Unified diff core:dev vs beta:origin/runtime-delete</a></li>
+
+                        <li><a href='diff_runtime-delete-2.html'>Unified diff core:dev vs beta:origin/runtime-delete-2</a></li>
+
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                 </ul>
