--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_fix-firmware.html'>Unified diff core:dev vs beta:origin/fix-firmware</a></li>
 
+                        <li><a href='diff_impr_redacted.html'>Unified diff core:dev vs beta:origin/impr_redacted</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
