Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,10 +12,6 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_fix-firmware.html'>Unified diff core:dev vs beta:origin/fix-firmware</a></li>
-
-                        <li><a href='diff_impr_redacted.html'>Unified diff core:dev vs beta:origin/impr_redacted</a></li>
-
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -24,13 +20,13 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_renovate/igorshubovych-markdownlint-cli-0.x.html'>Unified diff core:dev vs beta:origin/renovate/igorshubovych-markdownlint-cli-0.x</a></li>
-
                         <li><a href='diff_runtime-delete.html'>Unified diff core:dev vs beta:origin/runtime-delete</a></li>
 
                         <li><a href='diff_runtime-delete-2.html'>Unified diff core:dev vs beta:origin/runtime-delete-2</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
+
+                        <li><a href='diff_update-fixtures.html'>Unified diff core:dev vs beta:origin/update-fixtures</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
