Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_enumerate.html'>Unified diff core:dev vs beta:origin/enumerate</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -25,8 +27,6 @@
                         <li><a href='diff_runtime-delete-2.html'>Unified diff core:dev vs beta:origin/runtime-delete-2</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
-
-                        <li><a href='diff_update-fixtures.html'>Unified diff core:dev vs beta:origin/update-fixtures</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
