Update: main - Diff report completed

--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -25920,7 +25920,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            for j in range(len(value)):</span>
+            <span class="d2h-code-line-ctn">            for j, item in enumerate(value):</span>
         </div>
     </td>
 </tr><tr>
@@ -25930,7 +25930,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                if value[j] not in (OFF, NONE):</span>
+            <span class="d2h-code-line-ctn">                if item not in (OFF, NONE):</span>
         </div>
     </td>
 </tr><tr>
