--- a/beta/diff.html
+++ b/beta/diff.html
@@ -26394,7 +26394,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            for j in range(len(value)):</span>
+            <span class="d2h-code-line-ctn">            for j, item in enumerate(value):</span>
         </div>
     </td>
 </tr><tr>
@@ -26404,7 +26404,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">                if value[j] not in (OFF, NONE):</span>
+            <span class="d2h-code-line-ctn">                if item not in (OFF, NONE):</span>
         </div>
     </td>
 </tr><tr>
