--- a/beta/index.html
+++ b/beta/index.html
@@ -20,6 +20,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/actions-checkout-4.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-checkout-4.x</a></li>
+
                         <li><a href='diff_runtime-delete.html'>Unified diff core:dev vs beta:origin/runtime-delete</a></li>
 
                         <li><a href='diff_runtime-delete-2.html'>Unified diff core:dev vs beta:origin/runtime-delete-2</a></li>
