--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
+                        <li><a href='diff_testing123.html'>Unified diff core:dev vs beta:origin/testing123</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
