--- a/beta/index.html
+++ b/beta/index.html
@@ -12,8 +12,6 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_fix-select.html'>Unified diff core:dev vs beta:origin/fix-select</a></li>
-
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -21,6 +19,8 @@
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_renovate/actions-checkout-4.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-checkout-4.x</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
