--- a/beta/index.html
+++ b/beta/index.html
@@ -20,7 +20,7 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_renovate/actions-checkout-4.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-checkout-4.x</a></li>
+                        <li><a href='diff_pw_0_37_7.html'>Unified diff core:dev vs beta:origin/pw_0_37_7</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
