Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -29943,7 +29943,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.37.<ins>8</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.37.<ins>9</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -35469,7 +35469,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            self.entity_description.key, self.device[LOCATION], STATE_ON, option</span>
+            <span class="d2h-code-line-ctn">            self.entity_description.key, self.device[LOCATION], option, STATE_ON</span>
         </div>
     </td>
 </tr><tr>
