--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,12 @@
 
                         <li><a href='diff_reboot-button.html'>Unified diff core:dev vs beta:origin/reboot-button</a></li>
 
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
+                        <li><a href='diff_renovate/codespell-project-codespell-2.x.html'>Unified diff core:dev vs beta:origin/renovate/codespell-project-codespell-2.x</a></li>
+
+                        <li><a href='diff_revert-redacting.html'>Unified diff core:dev vs beta:origin/revert-redacting</a></li>
+
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                 </ul>
