Update: main - Diff report completed

--- a/beta/diff_reboot-button.html
+++ b/beta/diff_reboot-button.html
@@ -28969,7 +28969,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e9&#x2F;ca&#x2F;11a1a4f55a4fd597728d74fa3c73b1b98927745e56d747e319def6120363&#x2F;</del>plugwise<del>-0.38.0a5.tar.gz#plugwise</del>==0.<del>38</del>.<del>0a5</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;ae&#x2F;5d&#x2F;403d3024a0639c8fb7383cb69553a8f03fd1d1be2c35e960634be2002707&#x2F;</del>plugwise<del>-0.38.0a7.tar.gz#plugwise</del>==0.<del>38</del>.<del>0a7</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -28979,7 +28979,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>51</del>.<del>0a2</del>&quot;</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>51</del>.<del>0a4</del>&quot;</span>
         </div>
     </td>
 </tr><tr>
