--- a/beta/index.html
+++ b/beta/index.html
@@ -20,6 +20,10 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/actions-checkout-4.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-checkout-4.x</a></li>
+
+                        <li><a href='diff_renovate/pycqa-bandit-1.x.html'>Unified diff core:dev vs beta:origin/renovate/pycqa-bandit-1.x</a></li>
+
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                 </ul>
