--- a/beta/index.html
+++ b/beta/index.html
@@ -20,6 +20,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_pw_0_38_3.html'>Unified diff core:dev vs beta:origin/pw_0_38_3</a></li>
+
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                 </ul>
