--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -28559,7 +28559,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>38</del>.3&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>38</del>.<del>3</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -28703,7 +28703,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>37</ins>.3&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>37</ins>.<ins>4.1</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
