--- a/beta/diff_new_sensor.html
+++ b/beta/diff_new_sensor.html
@@ -22034,7 +22034,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e1&#x2F;dc&#x2F;a1eb174d6052189a701dc5286f561996e731de23aee746ac5a9f537663d8&#x2F;</del>plugwise<del>-0.33.0a0.tar.gz#plugwise</del>==0.<del>33</del>.<del>0a0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e1&#x2F;dc&#x2F;a1eb174d6052189a701dc5286f561996e731de23aee746ac5a9f537663d8&#x2F;</del>plugwise<del>-</del>0.<del>33</del>.<del>0a0</del>.<del>tar.gz#plugwise==0.33.0a0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -22178,7 +22178,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>37</ins>.<ins>3</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise<ins>==</ins>0.<ins>37</ins>.<ins>4</ins>.<ins>1</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
