--- a/beta/diff_select_preset.html
+++ b/beta/diff_select_preset.html
@@ -22204,7 +22204,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>35</del>.<del>1</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>35</del>.1&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -22348,7 +22348,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>37</ins>.<ins>3</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>37</ins>.<ins>4.</ins>1&quot;],</span>
         </div>
     </td>
 </tr><tr>
