--- a/beta/index.html
+++ b/beta/index.html
@@ -20,7 +20,7 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+                        <li><a href='diff_rework-runtime-update-2.html'>Unified diff core:dev vs beta:origin/rework-runtime-update-2</a></li>
 
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
